--- a/student_list/templates/app/index.html
+++ b/student_list/templates/app/index.html
@@ -2,7 +2,7 @@
 
 {% block header %}
   <h1>{% block title %}Results{% endblock %}</h1>
-	<form action="{{ url_for('application.create_student') }}">
+	<form action="{{ url_for('student_list.create_student') }}">
     <input type="submit" value="Add new student">
  	</form>
 {% endblock %}
@@ -17,14 +17,14 @@
 						<th>Name: {{ name }}</th>
 						<th>Class: {{ details['class'] }}</th>
 						<th>
-							<form action="{{ url_for('application.update', name=name) }}">
+							<form action="{{ url_for('student_list.update', name=name) }}">
     						<input type="submit" value="Edit">
  							</form>
 						</th>
 						<th>
-							<form action="{{ url_for('application.delete_student', name=name) }}" method="post">
+							{#<form action="{{ url_for('application.delete_student', name=name) }}" method="post">
     						<input type="submit" value="Delete">
- 							</form>
+ 							</form>#}
 						</th>
 					</tr>
 				</table>
@@ -39,20 +39,20 @@
 								<td>{{ subject }}</td>
 								<td>{{ score }}</td>
 								<td>
-									<form action="{{ url_for('application.update_score', name=name, subject=subject) }}">
+									<form action="{{ url_for('student_list.update_score', name=name, subject=subject) }}">
     								<input type="submit" value="Edit">
  									</form>
 								</td>
 								<td>
-									<form action="{{ url_for('application.delete_score', name=name, subject=subject) }}" method="post">
+									{#<form action="{{ url_for('application.delete_score', name=name, subject=subject) }}" method="post">
     								<input type="submit" value="Delete">
- 									</form>
+ 									</form>#}
 								</td>
 							</tr>
 							{% endif %}
 						{% endfor %}
 					</table>
-					<form action="{{ url_for('application.create_subject', name=name) }}">
+					<form action="{{ url_for('student_list.create_subject', name=name) }}">
     				<input type="submit" value="Add new subject">
  					</form>
 				</div>
