--- a/student_list/templates/base.html
+++ b/student_list/templates/base.html
@@ -2,9 +2,9 @@
 <title>{% block title %}{% endblock %} - App</title>
 <nav>
 	<ul>
-		<li><a href="{{ url_for('application.upload') }}">Upload</a></li>
+		{# <li><a href="{{ url_for('application.upload') }}">Upload</a></li>
   	<li><a href="{{ url_for('application.downloadpage') }}">Download</a></li>
-		<li><a href="{{ url_for('application.rankings') }}">Rankings</a></li>
+		<li><a href="{{ url_for('application.rankings') }}">Rankings</a></li> #}
 	</ul>
 </nav>
 <section class="content">
@@ -16,6 +16,6 @@
   {% endfor %}
   {% block content %}{% endblock %}
 </section>
-<form action="{{ url_for('application.index') }}">
+<form action="{{ url_for('student_list.index') }}">
   <input type="submit" value="Main Page">
 </form>
