--- a/student_list/templates/base.html
+++ b/student_list/templates/base.html
@@ -2,9 +2,9 @@
 <title>{% block title %}{% endblock %} - App</title>
 <nav>
 	<ul>
-		{# <li><a href="{{ url_for('application.upload') }}">Upload</a></li>
-  	<li><a href="{{ url_for('application.downloadpage') }}">Download</a></li>
-		<li><a href="{{ url_for('application.rankings') }}">Rankings</a></li> #}
+		<li><a href="{{ url_for('student_list.upload') }}">Upload</a></li>
+  	<li><a href="{{ url_for('student_list.downloadpage') }}">Download</a></li>
+		<li><a href="{{ url_for('student_list.rankings') }}">Rankings</a></li>
 	</ul>
 </nav>
 <section class="content">
